# ADTLinearOrganization

./: CMakeLists.txt  README.md  main.cpp
src/: ArraySequence.h  BitSequence.h  DynamicArray.h  Exceptions.h  IEnumerable.h  IEnumerator.h  LinkedList.h  ListSequence.h  Option.h  Sequence.h  Tuple.h
tests/: test_BitSequence.cpp  test_DynamicArray.cpp  test_LinkedList.cpp  test_MapReduce.cpp  test_Sequence.cpp
